--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,52 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^5.1.0
+  curved_navigation_bar: ^1.0.6
+  firebase_core: ^3.2.0
+  dotted_border: ^2.1.0
+  email_validator: ^3.0.0
+  firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.1
+  flutter_email_sender: ^6.0.3
+  # flutter_geofire: ^2.0.3
+  flutter_polyline_points: ^2.1.0
+  google_generative_ai: ^0.2.0
+  flutter_markdown: ^0.6.20
+  geolocator: ^12.0.0
+  fluttertoast: ^8.2.6
+  geocoding: ^3.0.0
+  geoflutterfire_plus: ^0.0.27
+  google_sign_in: ^6.2.1
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  intl_phone_field: ^3.2.0
+  location: ^7.0.0
+  lottie: ^3.1.2
+  mailer: ^6.1.1
+  markdown: ^7.2.2
+  noise_meter: ^5.0.2
+  path_provider: ^2.1.3
+  permission_handler: ^11.3.1
+  sensors_plus: ^5.0.1
+  shared_preferences: ^2.2.3
+  smooth_star_rating_nsafe: ^1.0.0+1
+  string_similarity: ^2.0.0
+  syncfusion_flutter_charts: ^26.1.42
+  url_launcher: ^6.2.4
+  video_player: ^2.9.1
+  path: ^1.9.0
+  internet_connection_checker_plus: ^2.5.0
+  flutter_tts: ^4.0.2
+  flowery_tts: ^1.2.0
+  flutter_native_contact_picker: ^0.0.6
+  flutter_launcher_icons: ^0.13.1
+  camera: ^0.11.1
+  audioplayers: ^6.4.0
+  csv: ^6.0.0
+  speech_to_text: ^7.0.0
+  vibration: ^3.1.3
+  sms_sender_background: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +104,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/animations/
+    - assets/fonts/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
